# python-project-49

./: .README.md.swp  .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
brain_games/: '  engine.py
brain_games/games/: calc_games.py  even_games.py  gcd_games.py  prime_games.py  progression_games.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
