[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Nurzhan2023 <nurzhan02061990@gmail.com>"]
readme = "README.md"
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
